Fix ServiceLoader queries using ModuleClassLoader & add related tests (#52)
The fix is just to call the package-private
`ModuleLayer.bindToLoader(ClassLoader)` method on the parent layers when
creating the `ModuleClassLoader`.

The rest of the PR is a complicated testing setup, to make sure that we
can test with both CP-loaded and SJH-loaded source sets.

Closes MCModLauncher/modlauncher#100.